# SynergyPlus

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile.apiserver  Dockerfile.operator  Makefile  PROJECT  README.md  TESTING.md  go.mod  go.sum
.github/workflows/: release-images.yml  release-pypi.yml
api/v1/: groupversion_info.go  runnerpool_types.go  zz_generated.deepcopy.go
assets/logo/: README.md
cmd/apiserver/: main.go
cmd/operator/: main.go
config/: kustomization.yaml  versions.yaml
config/crd/: synergyplus.io_runnerpools.yaml
config/keda/: scaledobject.yaml
config/manager/: manager.yaml
config/portal/: portal.yaml
config/rbac/: role.yaml
config/samples/: runnerpool.yaml
db/migrations/: 0001_init.sql  0002_auth.sql  0003_batch_counts.sql  0004_batch_rollup_authoritative.sql  0005_idempotency_per_user.sql  0006_eligible_simulations.sql  0007_lifecycle_functions.sql
deploy/: docker-compose.yml  smoke.sh
deploy/k8s-local/: minio.yaml  postgres.yaml  runnerpool-demo.yaml  secret.yaml  seed-job.yaml
deploy/seed/: Dockerfile  README.md  entrypoint.sh  seed.py
docs/: BUILD_STATUS.md  CONTRACT.md  PROPOSAL.md  QA_REPORT.md  RUNNER-DIAGNOSIS.md  SECURITY_AUDIT.md  architecture-review-2026-06.md  autoscaling-production-bringup.md
docs/adr/: 0001-worker-pool-execution-model.md  0002-postgres-backed-run-queue.md  0003-at-least-once-with-idempotent-results.md  0004-per-user-fairness-single-namespace.md  0005-per-version-keda-scaling.md  0006-runnerpool-is-the-only-crd.md  0007-async-batch-expansion-cache-at-expansion.md  0008-result-extraction-and-retention.md  0009-better-auth-with-domain-allowlist-and-api-key-portal.md  0010-single-postgres-instance.md  0011-single-home-claim-eligibility.md  0012-canonical-content-hash.md  0013-lifecycle-transitions-owned-by-sql.md  0015-runnerpool-cr-single-source.md  (+1 more)
hack/: bump-version.sh  render-versions.sh
internal/: README.md
portal/: .env.example  Dockerfile  README.md  better-auth-schema.sql  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
qa/: 01_concurrency.sh  02_reaper.sh  03_cache.sh  04_usercap.sh  05_async_batch.sh  06_idempotency_xuser.sh  lib.sh
runner/: Dockerfile  README.md  pyproject.toml
runner/synergy_runner/: __init__.py  __main__.py  config.py  db.py  engine.py  heartbeat.py  loop.py  metrics.py  parse_err.py  storage.py
runner/tests/: test_content_hash_vectors.py  test_storage_bucket_resolve.py
sample/: notebook.ipynb
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/synergyplus/: __init__.py  client.py  models.py  storage.py
sdk/python/tests/: test_presigned.py
testdata/: api_key_vectors.json  content_hash_vectors.json
(+83 files in other folders)
