[project]
name = "synergy-runner"
version = "0.4.0"
description = "SynergyPlus pull-loop Runner — claim queued simulations, run EnergyPlus, extract Core Metrics, upload artifacts, write results."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "SynergyPlus contributors", email = "tanryan777@gmail.com" },
]
keywords = ["energyplus", "simulation", "building-energy", "worker", "queue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "boto3>=1.34",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
# Drop-in alternative driver if psycopg v3 binaries are unavailable.
psycopg2 = ["psycopg2-binary>=2.9"]

[project.scripts]
synergy-runner = "synergy_runner.__main__:main"

[project.urls]
Homepage = "https://github.com/City-Syntax/SynergyPlus"
Repository = "https://github.com/City-Syntax/SynergyPlus"
Issues = "https://github.com/City-Syntax/SynergyPlus/issues"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["synergy_runner"]
